Re-insert Pages javascript socket to see if new Pages.jl version is fixed

--- a/www/index.html
+++ b/www/index.html
@@ -100,10 +100,10 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="https://d3js.org/d3.v5.min.js"></script>
     <script src="https://d3js.org/d3-queue.v3.min.js"></script>
-    <!-- <script src="pages.js"></script> -->
+    <script src="pages.js"></script>
     <script>
-     /* Pages.start(window.location.href); */
-     var Pages={id:"no-id-ea"};
+     Pages.start(window.location.href);
+     /* var Pages={id:"no-id-ea"}; */
      var cartoon = d3.select("#cartoon"),
 	 cartoon_width = +cartoon.attr("width");
      var n_iter=100;
