--- a/www/index.html
+++ b/www/index.html
@@ -371,7 +371,7 @@
      function show_form(node, data) {
 	 var rows = node.selectAll('div')
 			.data(data, d => d.key)
-			.enter().filter(d => d.value.Unit!="NA")
+			.enter().filter(d => d.value.Unit!="NA" & d.key!="name" & d.key!="colour")
 			.append('div').attr("class", "row");
 	 rows.append('label')
 	     .attr("class", "col-4 col-form-label")
