Fix dissociate/degrade nomenclature

--- a/www/index.html
+++ b/www/index.html
@@ -134,11 +134,11 @@
 			 pol_size:"Size of pols",
 			 repair_half_life:"Repair T½",
 			 processivity:"Processivity T½",
-			 removal:"Degradation T½",
+			 removal:"Dissociation T½",
 			 pause_site:"Pause location",
 			 release_time:"Pause dwell time",
 			 complete_reuse_p:"P(Reuse on completion)", 
-			 dropoff_reuse_p:"P(Reuse on degradation)", 
+			 dropoff_reuse_p:"P(Reuse on dissociation)", 
 			 genome_prop:"Proportion in genome",
 			 pol_N:"Polymerase count",
 			 speed_factor_t0:"Speed factor",
@@ -164,7 +164,7 @@
 			pause_site:"Number of bases from TSS where polymerases will pause",
 			release_time:"Length of time paused polymerases will be stalled for",
 			complete_reuse_p:"If a polymerase achieves full length transcription, the probability that it will be made available for initiation again", 
-			dropoff_reuse_p:"If a polymerase is prematurely removed, the probability that it will be made available for initiation again", 
+			dropoff_reuse_p:"If a polymerase is prematurely dissociated, the probability that it will be made available for initiation again", 
 			genome_prop:"What proportion of genes in the genome are represented by this set of parameters",
 			pol_N:"Number of polymerases available per gene for initiation immediately prior to UV damage",
 			speed_factor_t0:"By what factor do polymerase speeds change immediately upon damage",
