Improve labelling of form - back to "removal"

--- a/www/index.html
+++ b/www/index.html
@@ -133,8 +133,8 @@
 			 pol_speed:"Speed of pols",
 			 pol_size:"Size of pols",
 			 repair_half_life:"Repair T½",
-			 processivity:"Processivity T½",
-			 removal:"Dissociation T½",
+			 processivity:"Processivity",
+			 removal:"Removal time",
 			 pause_site:"Pause location",
 			 release_time:"Pause dwell time",
 			 complete_reuse_p:"P(Reuse on completion)", 
@@ -159,12 +159,12 @@
 			pol_speed:"Speed of freely moving polymerases",
 			pol_size:"Number of bases a polymerase occupies",
 			repair_half_life:"The amount of time we'd expect for half the damage sites to be repaired",
-			processivity:"Amount of time since initiation, at which point a polymerase has 50% change of disassiciating from gene",
-			removal:"Cummulative amount of time a polymerase has spent stalled, at which point it has a 50% change of disassociated from gene",
+			processivity:"Expected amount of time since initiation that an active polymerase can remain on a gene",
+			removal:"Expected cumulative amount of time a polymerase can spend stalled before being removed by dissociation or degradation",
 			pause_site:"Number of bases from TSS where polymerases will pause",
 			release_time:"Length of time paused polymerases will be stalled for",
 			complete_reuse_p:"If a polymerase achieves full length transcription, the probability that it will be made available for initiation again", 
-			dropoff_reuse_p:"If a polymerase is prematurely dissociated, the probability that it will be made available for initiation again", 
+			dropoff_reuse_p:"If a polymerase is prematurely removed, the probability that it will be made available for initiation again. Probability of dissociation as opposed to degradation", 
 			genome_prop:"What proportion of genes in the genome are represented by this set of parameters",
 			pol_N:"Number of polymerases available per gene for initiation immediately prior to UV damage",
 			speed_factor_t0:"By what factor do polymerase speeds change immediately upon damage",
