--- a/www/index.html
+++ b/www/index.html
@@ -135,8 +135,8 @@
 			 "processivity",
 			 "uv_distance",
 			 "repair_half_life",
-			 "removal",
-			 "dropoff_reuse_p",
+			 "dissoc",
+			 "degrad",
 			 "gene_length",
 			 "complete_reuse_p",
 			 "run_length",
@@ -156,11 +156,11 @@
 			 pol_size:"Size of pols",
 			 repair_half_life:"Repair T½",
 			 processivity:"Processivity",
-			 removal:"Removal time",
+			 dissoc:"Dissociation time",
 			 pause_site:"Pause location",
 			 release_time:"Pause dwell time",
 			 complete_reuse_p:"P(Reuse on completion)", 
-			 dropoff_reuse_p:"P(Reuse on dissociation)", 
+			 degrad:"Degradation time", 
 			 genome_prop:"Proportion in genome",
 			 pol_N:"Polymerase count",
 			 speed_factor_t0:"Speed factor",
@@ -182,11 +182,11 @@
 			pol_size:"Number of bases a polymerase occupies",
 			repair_half_life:"The amount of time we'd expect for half the damage sites to be repaired",
 			processivity:"Expected amount of time since initiation that an active polymerase can remain on a gene",
-			removal:"Expected cumulative amount of time a polymerase can spend stalled before being removed by dissociation or degradation",
+			dissoc:"Expected cumulative amount of time a polymerase can spend stalled before being removed by dissociation and returned to polymerase pool",
 			pause_site:"Number of bases from TSS where polymerases will pause",
 			release_time:"Length of time paused polymerases will be stalled for",
 			complete_reuse_p:"If a polymerase achieves full length transcription, the probability that it will be made available for initiation again", 
-			dropoff_reuse_p:"If a polymerase is prematurely removed, the probability that it will be made available for initiation again. Probability of dissociation as opposed to degradation", 
+			degrad:"Expected cumulative amount of time a polymerase can spend stalled before being removed by degraded, not to return to polymerase pool", 
 			genome_prop:"What proportion of genes in the genome are represented by this set of parameters",
 			pol_N:"Number of polymerases available per gene for initiation immediately prior to UV damage",
 			speed_factor_t0:"By what factor do polymerase speeds change immediately upon damage",
