--- a/www/index.html
+++ b/www/index.html
@@ -430,7 +430,7 @@
 	 }).then(show_bookmark);
      }
      function show_bookmark(bookmark) {
-	 document.getElementByID("bookmark_url").textContent=window.location.href.split('?')[0] + "?bookmark=" + bookmark.bookmark;
+	 document.getElementById("bookmark_url").textContent=window.location.href.split('?')[0] + "?bookmark=" + bookmark.bookmark;
      }
      function progress(task, n) {
 	 d3.select("#progress").text(task + ": " +  n + "/100");
