--- a/www/index.html
+++ b/www/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="bootstrap.min.css" >
+    <link rel="stylesheet" href="lib/bootstrap.min.css" >
+    <link rel="stylesheet" href="lib/bootstrap-tourist.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="bootstrap-tourist.css">
     <title>Damage Repair Simulation</title>
     <style>
      .exit {
@@ -98,13 +98,13 @@
       </div>
     </div>
     
-    <script src="jquery-3.4.1.min.js"></script>
-    <script src="popper.min.js"></script>
-    <script src="bootstrap.min.js"></script>
-    <script src="bootstrap-tourist.js"></script>
+    <script src="lib/jquery-3.4.1.min.js"></script>
+    <script src="lib/popper.min.js"></script>
+    <script src="lib/bootstrap.min.js"></script>
+    <script src="lib/bootstrap-tourist.js"></script>
     <script src="tour.js"></script>
-    <script src="d3.v5.min.js"></script>
-    <script src="d3-queue.v3.min.js"></script>
+    <script src="lib/d3.v5.min.js"></script>
+    <script src="lib/d3-queue.v3.min.js"></script>
     <script src="pages.js"></script>
     <script>
      Pages.start(window.location.href);
